<resources>
    <string name="app_name">HOME DOCTOR</string>
    <string name="home_doctor">Home Doctor</string>
    <string name="loading_please_wait">loading please wait...</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="phone_number">Phone Number</string>
    <string name="full_name">Full Name</string>
    <string name="pay_50_ksh_to_mpesa_number_0112417575">Pay 50 Ksh to Mpesa number 0112417575</string>
    <string name="pay_now">Pay Now</string>
    <string name="enter_your_symptoms">Enter your symptoms</string>
    <string name="diagnose">Diagnose</string>
    <string name="diagnosis_will_appear_here">Diagnosis will appear here</string>
    <string name="back_to_dashboard">Back to Dashboard</string>
    <string name="suggested_medications_will_appear_here">Suggested Medications will appear here</string>
    <string name="doctor_s_recommendations_will_appear_here">Doctor\'s Recommendations will appear here</string>
    <string name="new_course">New Course</string>
    <string name="new_phone">New Phone</string>
    <string name="new_name">New Name</string>
    <string name="update_profile">Update Profile</string>
    <string name="logout">Logout</string>
    <string name="profile_management">Profile Management</string>
    <string name="doctor_recommendations_and_medications">Doctor Recommendations and Medications</string>
    <string name="start_diagnosis">Start Diagnosis</string>
    <string name="welcome">Welcome</string>
    <string name="don_t_have_an_account_sign_up_here">Don\'t have an account? Sign up here</string>
    <string name="course">Course</string>
    <string name="already_have_an_account_login_here">Already have an account? Login here</string>
    <string name="enter_mpesa_transaction_id">Enter Mpesa Transaction ID</string>
    <string name="verify_payment">Verify Payment</string>
    <string name="get_diagnosis">Get Diagnosis</string>
    <string name="diagnosis_result_will_appear_here">Diagnosis result will appear here</string>
    <string name="get_recommendations">Get Recommendations</string>
    <string name="profile_details">Profile Details</string>
    <string name="name">Name:</string>
    <string name="e">-</string>
    <string name="a">-</string>
    <string name="b">-</string>
    <string name="edit_name">Edit Name</string>
    <string name="edit_phone">Edit Phone</string>
    <string name="edit_course">Edit Course</string>
    <string name="c">--</string>
    <string name="welcomee">Welcome!</string>
    <string name="symptom_diagnosis">Symptom Diagnosis</string>
    <string name="doctor_s_recommendations">Doctor\'s Recommendations</string>
    <string name="view_profile">View Profile</string>
</resources>